@@ -20,24 +20,6 @@ name|java
 operator|.
 name|io
 operator|.
-name|ByteArrayInputStream
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|ByteArrayOutputStream
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
 name|IOException
 import|;
 end_import
@@ -104,6 +86,21 @@ operator|.
 name|util
 operator|.
 name|List
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|io
+operator|.
+name|output
+operator|.
+name|ByteArrayOutputStream
 import|;
 end_import
 begin_import
@@ -983,14 +980,10 @@ expr_stmt|;
 name|InputStream
 name|in
 init|=
-operator|new
-name|ByteArrayInputStream
-argument_list|(
 name|out
 operator|.
-name|toByteArray
+name|toInputStream
 argument_list|()
-argument_list|)
 decl_stmt|;
 return|return
 operator|(
